maze.lessons.maze.island.IslandMaze.scala.error
Escaper:4: error: not found: value estfaceMur
    while (getY()!=0  && !estfaceMur()){
                          ^