maze.lessons.maze.island.IslandMaze.scala.code
override def run() {
  while (!estSurBiscuit()){
    while (getY()!=0  && !estfaceMur()){
    avance()
    } 
    gauche()
    keepHandOnSideWall()
  }
  prendBiscuit()
  }


def keepHandOnSideWall(){
  gauche()
  if (!estFaceMur()){
    avance()
  } else {
    droite()
    if (!estFaceMur()){
      avance()
    } else {
      droite()
      if (!estFaceMur()){
        avance()
      } else {
        droite()
        avance()
      }
    }
  }}